Fixed various display issues

--- a/_layouts/item.html
+++ b/_layouts/item.html
@@ -30,7 +30,7 @@ layout: page
 <script src="{{ site.baseurl }}/assets/uv/uv.js"></script>
 
 
-<table id="annotation-table">
+<table id="annotation-table"  class="table table-bordered table-dark">
   <thead>
     <tr>
       <th style="width: 15%;">Time</th>
@@ -43,7 +43,7 @@ layout: page
       {%- for annotation in site.data[page.manifest_name].canvas-1[annotation_page.label].items -%}
         <tr>
           {% assign timestamp_array = annotation.target.selector.t | split: ',' %}
-          <td class="timestamp" data-timestamp="{{timestamp_array[0]}}">
+          <td class="timestamp" data-timestamp="{{timestamp_array[0]}}"  data-sort="{{timestamp_array[0]}}">
             {{timestamp_array[0] | divided_by: 60 | floor }}:{{timestamp_array[0] | modulo: 60 | ceil }}
             {% if timestamp_array[1] %}
               - {{timestamp_array[1] | divided_by: 60 | floor }}:{{timestamp_array[1] | modulo: 60 | round }}
@@ -63,9 +63,11 @@ layout: page
 
 <script>
   $('tr').on('click',function(){
-   var myDataAttr = $(this).find('td.timestamp').data('timestamp');
-   myUV.extension.centerPanel.avcomponent.canvasInstances[0]._setCurrentTime(myDataAttr);
-   myUV.extension.centerPanel.avcomponent.play();
+     var myDataAttr = $(this).find('td.timestamp').data('timestamp');
+     if (myDataAttr) {
+       myUV.extension.centerPanel.avcomponent.canvasInstances[0]._setCurrentTime(myDataAttr);
+       myUV.extension.centerPanel.avcomponent.play();
+     }
    });
 
 $(document).ready( function() {
