update jekyll template

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,9 +15,7 @@
               {{ site.data.collection.summary.en[0] | escape }}
             {%- endif -%}
             </li>
-            {%- if site.email -%}
-            <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-            {%- endif -%}
+            <li>Project by {{ site.name }}</li>
         </ul>
       </div>
 
